feat(lib): add typed action and recognition results